# Nelson_Lab_Influenza_Strain_Names

./: gitignore  out.csv  out2_100.csv  out_100.csv  pyproject.toml  requirements.txt
config/: logging_config.yaml  package.yaml
docs/: README.md
src/name_gen/: __init__.py  main.py  strain_reader.py
src/name_gen.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/name_gen/tools/: host_tools.py  location_tools.py  phone_code.py  utils.py
src/strain_generator/: __init__.py  csv_handler.py  main.py  strain_reader.py
src/strain_generator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/strain_generator/config/: logging_config.yaml  package.yaml
src/strain_generator/data/: host_name.json
src/strain_generator/tools/: host_tools.py  location_tools.py
test_data/: example.csv  test_100.csv
tests/: test_strain_generator.py
