[build-system]
requires = ["setuptools>=62.6"]
build-backend = "setuptools.build_meta"

[project]
name = "strain_generator"
version = "0.1.0"
description = "Generate standardized influenza strain names from metadata."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Andrew LaPointe", email = "lapointear@nih.gov" },
    { name = "Martha Nelson", email = "you@example.com" },

]
keywords = ["influenza", "strain", "naming", "bioinformatics"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.package-data]
strain_generator = ["data/*.json"]

[project.scripts]
strain-gen = "strain_generator.main:main"
strain-read = "strain_generator.strain_reader:main"

[project.urls]
Repository = "https://github.com/NLM-DIR/Nelson_Lab_Influenza_Strain_Names"

[tool.setuptools.packages.find]
where = ["src"]
