[build-system]
requires = ["setuptools>=62.6"]
build-backend = "setuptools.build_meta"

[project]
name = "strain_generator"
version = "0.1.0"
description = "Generate standardized influenza strain names from metadata."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Andrew LaPointe", email = "lapointear@nih.gov" },
    { name = "Martha Nelson", email = "you@example.com" },

]
keywords = ["influenza", "strain", "naming", "bioinformatics"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "biopython==1.87",
    "certifi==2026.6.17",
    "charset-normalizer==3.4.9",
    "colorama==0.4.6",
    "idna==3.18",
    "numpy==2.5.1",
    "phonenumbers==9.0.33",
    "pycountry==26.2.16",
    "python-json-logger==4.1.0",
    "PyYAML==6.0.3",
    "RapidFuzz==3.14.5",
    "requests==2.34.2",
    "tqdm==4.68.4",
    "urllib3==2.7.0",
]

[tool.setuptools.package-data]
strain_generator = ["data/*.json", "config/*.yaml"]

[project.scripts]
strain-gen = "strain_generator.main:main"
strain-read = "strain_generator.strain_reader:main"

[project.urls]
Repository = "https://github.com/NLM-DIR/Nelson_Lab_Influenza_Strain_Names"

[tool.setuptools.packages.find]
where = ["src"]
